fix: form-check spacing and weight

--- a/src/scss/custom/_forms.scss
+++ b/src/scss/custom/_forms.scss
@@ -69,9 +69,6 @@ fieldset {
 
   input:is([type='radio']),
   input:is([type='checkbox']) {
-    label {
-      font-weight: $font-weight-semibold;
-    }
     & + label.active {
       transform: translateY(0%);
     }
@@ -242,8 +239,9 @@ textarea {
 
 .form-check {
   padding-left: 0;
-  margin-top: 0.5rem;
   position: relative;
+  margin-bottom: .5rem;
+
   [type='checkbox'],
   [type='radio'] {
     position: absolute;
@@ -261,11 +259,15 @@ textarea {
       height: 32px;
       line-height: 32px;
       font-size: 1rem;
+      font-weight: $font-weight-semibold;
       user-select: none;
-      margin-bottom: 0.5rem;
       @include media-breakpoint-up(sm) {
         font-size: 1.125rem;
       }
+    }
+
+    & + & {
+      margin-top: .5rem;
     }
 
     //focus
